# rust-gameboy

./: .gitignore  .gitmodules  1.bootstrap.js  Cargo.toml  README.md  bootstrap.js  index.html  rustfmt.toml
dmg/: Cargo.toml
dmg-boot/: Cargo.toml
dmg-boot/src/: cgb.rs  gb.rs  lib.rs
dmg-camera/: Cargo.toml
dmg-camera/src/: lib.rs
dmg-driver/gl/: Cargo.toml
dmg-driver/gl/src/: ppu.rs
dmg-driver/headless/: Cargo.toml
dmg-driver/headless/src/: ppu.rs
dmg-driver/rodio/: Cargo.toml
dmg-driver/rodio/src/: apu.rs
dmg-driver/sdl2/: Cargo.toml
dmg-driver/sdl2/src/: apu.rs  lib.rs  ppu.rs
dmg-driver/wasm/: Cargo.toml
dmg-driver/wasm/src/: lib.rs  poket_camera.rs  ppu.rs
dmg-frontend/: README.md
dmg-frontend/native/: Cargo.toml
dmg-frontend/native/src/: main.rs
dmg-frontend/web/: Cargo.toml
dmg-frontend/web/src/: lib.rs
dmg-frontend/web/www/: index.js
dmg-lib/: Cargo.toml  instr_timing.rs
dmg-lib/src/: apu.rs  cartridge.rs  cpu.rs  int.rs  interrupts.rs  joypad.rs  lib.rs  map.rs  mmu.rs  ppu.rs  reg.rs  timer.rs  vram.rs  wram.rs
dmg-lib/src/apu/: device.rs  samples.rs  sfx.rs
dmg-lib/src/cartridge/: mbc1.rs  mbc3.rs  mbc5.rs  rom.rs
dmg-lib/src/ppu/: palette.rs
dmg-lib/tests/: apu.rs  boot.rs  cartridge.rs  cpu.rs  cpu_instrs.rs
dmg-peripheral/: README.md
dmg-peripheral/camera/: Cargo.toml
dmg-peripheral/camera/src/: lib.rs
dmg-sdl2/: Cargo.toml
dmg-tools/: Cargo.toml
dmg-wasm/: Cargo.toml  build.sh
dmg-wasm/src/: camera.rs  lib.rs  video.rs
dmg/backend/gl/: Cargo.toml
dmg/backend/gl/src/: ppu.rs
dmg/backend/headless/: Cargo.toml
dmg/backend/headless/src/: ppu.rs
dmg/backend/rodio/: Cargo.toml
dmg/driver/headless/: Cargo.toml
dmg/driver/headless/src/: ppu.rs
dmg/driver/sdl2/: Cargo.toml
dmg/driver/sdl2/src/: apu.rs
dmg/driver/wasm/src/: poket_camera.rs
dmg/frontend/: README.md
dmg/frontend/native/: Cargo.toml
dmg/frontend/native/src/: main.rs
dmg/frontend/native_gl/: Cargo.toml
dmg/frontend/native_gl/src/: main.rs
dmg/frontend/web/src/: lib.rs
dmg/frontend/web/www/: index.js  package-lock.json
dmg/peripheral/camera/rom/: Gameboy Camera (UE) [S][!].gb
dmg/peripheral/camera/src/: lib.rs
dmg/src/: apu.rs  cartridge.rs  cpu.rs  cpu_reg.rs  lib.rs  map.rs  mapped.rs  mmu.rs  ppu.rs  timer.rs  vram.rs  work_ram.rs  wram.rs
dmg/src/cartridge/: mbc1.rs  mbc3.rs  mbc5.rs  rom.rs
dmg/src/ppu/: oam.rs  reg.rs
dmg/tests/: cpu_instrs.rs  instr_timing.rs
dmg/tools/: Cargo.toml
dmg01/: Cargo.toml
dmg01/boot/src/: gb.rs
dmg01/driver/headless/src/: ppu.rs
dmg01/driver/rodio/: Cargo.toml
dmg01/driver/sdl2/src/: ppu.rs
dmg01/driver/wasm/: Cargo.toml
dmg01/driver/wasm/src/: ppu.rs
dmg01/frontend/native/: Cargo.toml
dmg01/frontend/native/src/: main.rs
dmg01/frontend/web/: Cargo.toml
dmg01/frontend/web/src/: lib.rs
dmg01/frontend/web/www/: index.html  index.js
dmg01/peripheral/camera/: Cargo.toml
dmg01/peripheral/camera/src/: lib.rs
dmg01/src/: apu.rs  cartridge.rs  cpu.rs  joypad.rs  lib.rs  map.rs  mmu.rs  ppu.rs  timer.rs  vram.rs  wram.rs
dmg01/src/apu/: samples.rs
dmg01/src/cartridge/: mbc1.rs  mbc3.rs  mbc5.rs  rom.rs
dmg01/src/ppu/: oam.rs  palette.rs  reg.rs
dmg_lib/: Cargo.toml
dmg_lib/examples/: minifb.rs
dmg_lib/roms/Deadeus - Regular Edition/: README - 1.2.5.txt
dmg_lib/roms/GurbsAdventure/: GurbsAdventure.gbsproj
dmg_lib/src/: apu.rs  cartridge.rs  cpu.rs  interrupts.rs  joypad.rs  lib.rs  mmu.rs  ppu.rs  timer.rs  vram.rs  wram.rs
dmg_lib/src/cartridge/: mbc5.rs  rom_and_ram.rs
dmg_lib/tests/: boot.rs  cartridge.rs  cpu.rs
dmg_opengl/: Cargo.toml
dmg_opengl/src/: lib.rs
dmg_sdl2/: Cargo.toml
dmg_sdl2/examples/: sdl2.rs
examples/: cpu.rs  cpu_tests.rs  imgui.rs  menu.rs  minifb.rs  mmu.rs  ppu.rs
modules/: Cargo.toml
modules/backend/gl/src/: ppu.rs
modules/backend/sdl2/: Cargo.toml
modules/backend/sdl2/src/: ppu.rs
modules/backend/wasm/: Cargo.toml
modules/backend/wasm/src/: lib.rs
modules/dmg-backend/gl/: Cargo.toml
modules/dmg-backend/gl/src/: ppu.rs
modules/dmg-backend/headless/: Cargo.toml
modules/dmg-backend/headless/src/: lib.rs  ppu.rs
modules/dmg-backend/rodio/: Cargo.toml
modules/dmg-backend/rodio/src/: apu.rs
modules/dmg-backend/sdl2/: Cargo.toml
modules/dmg-backend/sdl2/src/: apu.rs  ppu.rs
modules/dmg-backend/wasm/: Cargo.toml
modules/dmg-backend/wasm/src/: lib.rs  ppu.rs
modules/dmg-frontend/native/: Cargo.toml
modules/dmg-frontend/native/src/: main.rs
modules/dmg-frontend/native_gl/: Cargo.toml
modules/dmg-frontend/native_gl/src/: main.rs
modules/dmg-frontend/web/: Cargo.toml  build.sh
modules/dmg-lib/: Cargo.toml
modules/dmg-lib/src/: apu.rs  cartridge.rs  clock.rs  cpu.rs  device.rs  interrupt.rs  joypad.rs  lib.rs  mmu.rs  ppu.rs  timer.rs  vram.rs  wram.rs
modules/dmg-lib/src/apu/: device.rs  samples.rs
modules/dmg-lib/src/cartridge/: mbc1.rs  mbc3.rs  mbc5.rs  rom.rs
modules/dmg-lib/src/cpu/: registers.rs
modules/dmg-lib/src/ppu/: oam.rs  reg.rs
modules/dmg-lib/tests/: cpu_instrs.rs
modules/dmg-tools/: Cargo.toml
modules/frontend/web/: Cargo.toml
modules/src/: apu.rs  clock.rs  interrupt.rs  joypad.rs  ppu.rs  timer.rs  video_ram.rs
modules/src/cartridge/: mbc1.rs
modules/src/ppu/: reg.rs
modules/tests/: apu.rs  cpu_instrs.rs
roms/: 10-print.gb  Aladdin (E) (M6) [C][!].gbc  Contra (J).gb  James Bond 007 (U) [S][b1].gb  Mega Man V (E) [S].gb  Mystery Kingdom GB.gb  Pinball Deluxe (U).gb  Race Drivin' (U) [b2].gb  Star Wars (E).gb  V-Rally - Championship Edition (Europe) (En,Fr,De).gb  Worms (U) [!].gb
roms/Deadeus - Regular Edition/: bgb.ini
roms/cpu_instrs/individual/: 02-interrupts.nohalt.gb
src/: apu.rs  cartridge.rs  cpu.rs  dev.rs  device.rs  interrupts.rs  joypad.rs  lib.rs  mmu.rs  ppu.rs  reg.rs  registers.rs  serde.rs  sound.rs  test.rs  timer.rs  vram.rs  wram.rs
src/cartridge/: mbc1.rs  mbc3.rs  mbc5.rs  rom_only.rs
src/ppu/: palette.rs
tests/: boot.rs  cartridge.rs  cpu.rs  mmu.rs  ppu.rs
(+15 files in other folders)
