[workspace]
members = [
    "dmg",
    "dmg/boot",
    "dmg/tools",
    "dmg/peripheral/camera",
    "dmg/backend/sdl2",
    "dmg/backend/wasm",
    "dmg/backend/gl",
    "dmg/backend/rodio",
    "dmg/backend/headless",
    "dmg/frontend/native",
    "dmg/frontend/native_gl",
    "dmg/frontend/web",
]

