[workspace]
members = [
    "modules",
    "modules/boot",
    "modules/tools",
    "modules/peripheral/camera",
    "modules/backend/sdl2",
    "modules/backend/wasm",
    "modules/backend/gl",
    "modules/backend/rodio",
    "modules/backend/headless",
    "modules/frontend/native",
    "modules/frontend/native_gl",
    "modules/frontend/web",
]

