[workspace]
members = [
    "modules/dmg-lib",
    "modules/dmg-tools",
    #"modules/dmg-peripheral/camera",
    "modules/dmg-backend/sdl2",
    #"modules/dmg-backend/wasm",
    #"modules/dmg-backend/gl",
    #"modules/dmg-backend/rodio",
    "modules/dmg-backend/headless",
    "modules/dmg-frontend/native",
    "modules/dmg-frontend/native_gl",
    #"modules/dmg-frontend/web",
]

