[package]
name = "dmg-lib"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
dmg-boot = { path = "../dmg-boot", optional = true }

[features]
default = ["boot"]
boot = ["dmg-boot"]

