[package]
name = "dmg-lib"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.8", optional = true }
dmg-boot = { path = "../dmg-boot", optional = true }

[features]
default = ["boot", "logging"]
boot = ["dmg-boot"]
logging = ["log"]
