[package]
name = "dmg-wasm"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dmg-lib = { path = "../dmg-lib", features = ["boot"] }
dmg-camera = { path = "../dmg-camera" }
wasm-bindgen = "0.2.59"
web-sys = { version = "0.3.37", features = ["CanvasRenderingContext2d", "ImageData", "KeyboardEvent", "HtmlVideoElement"] }
console_log = "0.1.2"
log = "0.4.8"
wee_alloc = "0.4.5"