[package]
name = "dmg-lib"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dmg-boot = { path = "boot", optional = true }

[dev-dependencies]
dmg-driver-headless = { path = "driver/headless" }

[features]
default = []
boot = ["dmg-boot"]
