[package]
name = "dmg_sdl2"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dmg_lib = { path = "../dmg_lib" }
sdl2 = "0.33.0"
env_logger = "0.7.1"
log = "0.4.8"
