[package]
name = "dmg-driver-sdl2"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dmg-lib = { path = "../../dmg-lib", features = ["boot"] }
dmg-camera = { path = "../../dmg-camera" }

sdl2 = "0.33.0"
env_logger = "0.7.1"
log = "0.4.8"

image = "0.23.2"
