[package]
name = "dmg-driver-wasm"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dmg-lib = { path = "../../dmg-lib", features = ["boot"] }
dmg-camera = { path = "../../dmg-camera" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "ImageData", "KeyboardEvent", "HtmlVideoElement"] }
