[package]
name = "dmg-lib"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#dmg-data = { path = "../dmg-data", optional = true }

[dev-dependencies]
dmg-backend-headless = { path = "../dmg-backend/headless" }

[features]
default = []
#data = ["dmg-data"]
