[package]
name = "dmg-frontend-web"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dmg-lib = { path = "../../", features = ["boot"] }
dmg-peripheral-camera = { path = "../../peripheral/camera" }
dmg-driver-wasm = { path = "../../driver/wasm", features = ["video", "poket-camera"] }

wasm-bindgen = "0.2.59"
web-sys = { version = "0.3.37", features = ["KeyboardEvent"] }
console_log = "0.1.2"
log = "0.4.8"
wee_alloc = "0.4.5"