[package]
name = "dmg-backend-wasm"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dmg-lib = { path = "../../", features = ["boot"] }
dmg-peripheral-camera = { path = "../../peripheral/camera", optional = true }
wasm-bindgen = "0.2"
web-sys = { optional = true, version = "0.3", features = ["CanvasRenderingContext2d", "ImageData", "KeyboardEvent", "HtmlVideoElement"] }

[features]
default = []

video = ["web-sys"]
audio = ["web-sys"]
poket-camera = ["dmg-peripheral-camera", "web-sys"]
