[package]
name = "dmg-frontend-native"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dmg-lib = { path = "../../dmg-lib" }
dmg-backend-sdl2 = { path = "../../dmg-backend/sdl2", default-features = false, features = ["video"]}
sdl2 = "0.34.3"
