[package]
name = "dmg-frontend-native-gl"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dmg-lib = { path = "../../dmg-lib" }
dmg-backend-gl = { path = "../../dmg-backend/gl" }
gl = "0.14.0"
sdl2 = "0.34.3"
imgui = "0.5.0"
imgui-sdl2 = "0.12.0"
imgui-opengl-renderer = "0.9.0"
